= Changelog
:url-repo: https://github.com/opendevise/springio-asciidoctor-extensions

This document provides a summary of all notable changes to this project by release.
For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.

== 1.0.0-alpha.2 (2022-12-02)

=== Fixed

* Update CSS class prefix for toggling display of fold blocks

== 1.0.0-alpha.1 (2022-12-02)

_Initial prerelease._