@@ -5,7 +5,7 @@ const CHOMP_MODES = {
   all: ['tags', 'formatters', 'suppresswarnings', 'headers', 'packages'],
   none: [],
 }
-const JAVA_LIKE = ['java', 'groovy', 'kt']
+const JAVA_LIKE = ['groovy', 'java', 'kotlin']
 
 const ChompDirRx = /\/\/ @chomp:(file|line)$/
 const ChompAndReplaceDirRx = /^(.+?)\/\*(?: @chomp:line (.+?) )?\*\/ ?\S/
