@@ -1,7 +1,7 @@
 'use strict'
 
 const FOLD_MODES = { default: ['imports', 'tags'], all: ['imports', 'tags'], none: [] }
-const JAVA_LIKE = ['java', 'groovy', 'kt']
+const JAVA_LIKE = ['groovy', 'java', 'kotlin']
 
 const FoldDirectiveRx = /^\s*\/\/ @fold:(?:(on)( \S.*)?|off)$/
 
