@@ -4,6 +4,12 @@
 This document provides a summary of all notable changes to this project by release.
 For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.
 
+== Unreleased
+
+=== Fixed
+
+* Use correct source language (`kotlin`) when looking for Kotlin code blocks
+
 == 1.0.0-alpha.2 (2022-12-02)
 
 === Fixed
